# discord-book-bot

./: README.md  bot.py  init_db.py  pyproject.toml
