[tool.poetry]
name = "discord-book-bot"
version = "0.1.0"
description = "Track your books, get points for them, and challenge your friends!"
authors = ["josephbwagner"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
